--- a/src/pages/users.astro
+++ b/src/pages/users.astro
@@ -15,7 +15,7 @@ const pokes = await Promise.all([
 ])
 
 ---
-<UsersLayout title="Pokedex">
+<UsersLayout title="Users">
     <section x-data="{ order: $persist([1, 2, 3, 4, 5, 7]).using(urlStorageArray('--')).as('order') }">
         <span class="p-1 m-1" x-text="order"></span>
 
