--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,20 +7,30 @@ import Button from '../components/Button.astro';
 <Layout title="Alpinejs Examples">
     <div class="flex flex-col items-center w-full">
         <Container>
-            <div x-data="{ open: false }">
-                <Button @click="open = true">Expand</Button>
-                <span x-show="open">
-                    Content...
-                </span>
-            </div>
-        </Container>
-
-        <Container>
             <h1 x-data="{ message: 'I ❤️ Alpine' }" x-text="message"></h1>
         </Container>
 
         <Container>
-            <div x-data="{ count: 0 }" class="flex items-center gap-1">
+            <div x-data="{ open: false }" class="flex items-center gap-2">
+                <Button @click="open = !open">Expand</Button>
+                <div class="w-20">
+                    <div
+                        x-show="open"
+                        x-transition:enter="transition ease-out duration-300"
+                        x-transition:enter-start="opacity-0 transform scale-90"
+                        x-transition:enter-end="opacity-100 transform scale-100"
+                        x-transition:leave="transition ease-in duration-300"
+                        x-transition:leave-start="opacity-100 transform scale-100"
+                        x-transition:leave-end="opacity-0 transform scale-90"
+                    >
+                        Hello 👋
+                    </div>
+                </div>
+            </div>
+        </Container>
+
+        <Container>
+            <div x-data="{ count: 0 }" class="flex items-center gap-3">
                 <Button x-on:click="count++">Increment</Button>
 
                 <span x-text="count"></span>
@@ -31,7 +41,7 @@ import Button from '../components/Button.astro';
             <div x-data="{ open: false }" class="flex flex-col">
                 <Button @click="open = ! open">Toggle</Button>
 
-                <div class="relative"><div x-cloak x-show="open" @click.outside="open = false" class="absolute flex flex-col p-5 bg-white bg-opacity-50 border rounded">Contents...</div></div>
+                <div class="relative"><div x-cloak x-show="open" x-transition.scale.80.origin.top @click.outside="open = false" class="absolute flex flex-col p-5 bg-white bg-opacity-50 border rounded">Contents...</div></div>
             </div>
         </Container>
 
@@ -168,116 +178,77 @@ import Button from '../components/Button.astro';
         <Container>
             <Button x-data @click="$clipboard('hello world')">Copy "Hello World"</Button>
         </Container>
+
+        <Container>
+            <div
+                x-data="{ users: null }"
+                x-init="$nextTick( async () => users = await (await fetch('/users.json')).json() )"
+            >
+                <div x-show="!users">Loading...</div>
+                <ul class="flex flex-wrap">
+                    <template x-for="user in users" :key="user.id">
+                        <li class="p-0.5">
+                            <div class="
+                                rounded-lg
+                                border
+                                border-[#FFFFFF70]
+                                drop-shadow
+                                overflow-hidden
+                                w-20
+                            "
+                            >
+                                <img class="aspect-[1/1]" :src="user.picture" />
+                                <span class="text-xs" x-text="user.name"></span>
+                            </div>
+                        </li>
+                    </template>
+                </ul>
+
+            </div>
+        </Container>
+
+        <Container x-data>
+            <div class="flex items-center gap-3">
+                <Button @click="$refs.text.remove()">Remove Text</Button>
+                <span x-ref="text">Hello 👋</span>
+            </div>
+        </Container>
+
+        <Container x-data>
+            <div x-data="{ openx: false }">
+                <Button @click="openx = ! openx">Toggle Modal</Button>
+
+                <template x-teleport="body">
+                    <dialog :open="openx" x-show="openx" x-trap.noscroll="openx" class="fixed z-50 flex flex-col w-full h-full bg-opacity-50 bg-slate-700">
+                        <div class="max-w-md p-5 m-auto bg-white" @click.outside="openx = false">
+                            Modal contents...
+                        </div>
+                    </dialog>
+                </template>
+            </div>
+        </Container>
     </div>
 </Layout>
 
 <script>
     import Alpine from 'https://esm.sh/alpinejs@3.13.0'
 
-    // document.addEventListener('alpine:init', () => {
-    Alpine.data('dropdown', (initialOpenState = false) => ({
-        open: initialOpenState,
+    import plugins from '/plugins.js?url'
+    Alpine.plugin(plugins)
 
-        toggle() {
-            this.open = ! this.open
-        },
+    import focus from 'https://esm.sh/@alpinejs/focus@3.13.1'
 
-        init() {
-            this.$watch('open', (value) => { console.log(`dropdown is now: ${value}`) })
-        },
-
-        trigger: {
-            ['@click']() {
-                this.open = ! this.open
-            },
-        },
-
-        dialogue: {
-            ['x-show']() {
-                return this.open
-            },
-            ['@click.outside']() {
-                this.open = false
-            },
-        },
-    }))
-
-    Alpine.store('darkMode', {
-        on: false,
-
-        toggle() {
-            this.on = ! this.on
-        }
-    })
+    Alpine.plugin(focus)
 
     window.toggleDarkMode = () => {
         Alpine.store('darkMode').toggle()
     }
 
-
-    Alpine.bind('SomeButton', ({prop='counter',incr=1}={}) => ({
-        type: 'button',
-
-        '@click'() {
-            this[prop] += incr
-        },
-
-        ':disabled'() {
-            return incr > 0 ? this[prop] >= 5  : this[prop] <= 0
-        },
-
-        'x-text'() {
-            return `${prop}${incr > 0 ? '++' : '--'}`
-        },
-    }))
-
-    Alpine.directive('uppercase', el => {
-        el.textContent = el.textContent.toUpperCase()
-    })
-
-    Alpine.directive('log', (el, { expression }, { evaluate, evaluateLater, effect, cleanup }) => {
-        // expression === 'message'
-        // console.log( evaluate(expression) )
-
-        let getThingToLog = evaluateLater(expression)
-
-        effect(() => {
-            getThingToLog(value => {
-                console.log(value)
-            })
-        })
-
-        // let handler = () => {}
- 
-        // window.addEventListener('click', handler)
-
-        // cleanup(() => {
-        //     window.removeEventListener('click', handler)
-        // })
-    })
-    // })
-
-    Alpine.directive('message', (el, { value, modifiers, expression }) => {
-        Alpine.addScopeToNode(el, Alpine.reactive({'message': expression}))
-    }).before('bind')
-
-    Alpine.magic('now', () => {
-        return (new Date).toLocaleTimeString()
-    })
-
-    // Alpine.magic('clipboard', () => {
-    //     return subject => navigator.clipboard.writeText(subject)
-    // })
-
-    Alpine.magic('clipboard', () => subject => {
-        navigator.clipboard.writeText(subject)
-    })
-
     Alpine.start()
 </script>
 
 <style is:global>
-    x-cloak {display: none;}
+    [x-cloak] {display: none;}
 
     button:not(:disabled),
     [type="button"]:not(:disabled),
