--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,3 +30,38 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 </style>
+
+
+
+<style is:global>
+    [x-cloak] {display: none;}
+
+    button:not(:disabled),
+    [type="button"]:not(:disabled),
+    [type="reset"]:not(:disabled),
+    [type="submit"]:not(:disabled),
+    .btn {
+        cursor: default;
+    }
+
+    .btn {
+        @apply px-4 py-2 font-semibold text-white  rounded select-none  disabled:text-stone-100  focus:outline-none focus:ring focus:ring-indigo-300;
+        @apply bg-indigo-600 disabled:bg-stone-500 hover:bg-indigo-500 disabled:hover:bg-stone-500 active:bg-indigo-700
+    }
+
+	.textarea {
+		@apply w-full px-4 py-2 font-semibold text-indigo-800 border-2 border-indigo-100 rounded select-none bg-indigo-50 disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300
+	}
+
+	.input {
+		@apply w-full px-4 py-2 font-semibold text-indigo-800 border-2 border-indigo-100 rounded select-none bg-indigo-50 disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 focus:outline-none focus:ring focus:ring-indigo-300
+	}
+
+	.select {
+		@apply w-full px-4 py-2 text-indigo-800 bg-indigo-100 rounded select-none font-semibold disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300
+	}
+</style>
+
+<!-- bg-gradient-to-br from-indigo-200 to-indigo-600 -->
+<!-- disabled:from-stone-200 disabled:to-stone-500 -->
+<!-- hover:from-stone-200 hover:to-stone-500 -->
