--- a/src/pages/formbuilder.astro
+++ b/src/pages/formbuilder.astro
@@ -125,16 +125,16 @@ const questions = survey.questions
 <script>
     import Alpine from 'https://esm.sh/alpinejs@3.13.0'
 
-    import plugins from '/plugins.js?url'
-    Alpine.plugin(plugins)
+    // import plugins from '/plugins.js?url'
+    // Alpine.plugin(plugins)
 
-    import focus from 'https://esm.sh/@alpinejs/focus@3.13.1'
+    // import focus from 'https://esm.sh/@alpinejs/focus@3.13.1'
 
-    Alpine.plugin(focus)
+    // Alpine.plugin(focus)
 
-    window.toggleDarkMode = () => {
-        Alpine.store('darkMode').toggle()
-    }
+    // window.toggleDarkMode = () => {
+    //     Alpine.store('darkMode').toggle()
+    // }
 
     Alpine.start()
 </script>
