--- a/src/components/Select.astro
+++ b/src/components/Select.astro
@@ -1,10 +1,12 @@
 ---
-const {options, value, ...props} = Astro.props
+const {options, value, class: cls, ...props} = Astro.props
+
 ---
-<select
-	class="select"
-	{...props}
->
+<select class={`select ${cls}`} {...props} >
 	<option hidden>Please Select One</option>
-	{options.map(option => (<option selected={(''+option)==(''+value)}>{option}</option>))}
+	{
+		(Array.isArray(options)) 
+		? options.map(option => (<option selected={(''+option)==(''+value)}>{option}</option>))
+		: Object.entries(options).map((option, op2) => (<option value={option[0]} selected={(''+option[0])==(''+value)}>{option[1]}</option>))
+	}
 </select>
