--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,15 @@ const { title } = Astro.props;
 	}
 
 	.select {
-		@apply w-full px-4 py-2 text-indigo-800 bg-indigo-100 rounded select-none font-semibold disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300
+		@apply w-full border-2 border-indigo-100 px-4 py-2 text-indigo-800 bg-indigo-50 rounded select-none font-semibold disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300
+	}
+
+	.switch {
+		@apply relative inline-flex flex-shrink-0 h-[28px] w-[56px] border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75
+	}
+
+	.switch-button {
+		@apply pointer-events-none inline-block h-[24px] w-[24px] rounded-full bg-white  shadow-lg transform ring-0 transition ease-in-out duration-200
 	}
 </style>
 
