--- a/src/layouts/Container.astro
+++ b/src/layouts/Container.astro
@@ -1,6 +1,6 @@
 ---
 ---
 
-<main {...Astro.props} class="container relative flex flex-col items-center p-5 m-5 mx-auto bg-white border rounded bg-opacity-50">
+<main {...Astro.props} class="container p-5 m-5 mx-auto card">
     <slot />
 </main>
