--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,9 +17,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="flex flex-row">
-		<main class="absolute w-full h-full space-y-40">
+		<main class="fixed w-full h-full space-y-40">
 			<div class="relative" id="home">
-				<div aria-hidden="true" class="absolute inset-0 grid grid-cols-2 -space-x-52 dark:opacity-20">
+				<div aria-hidden="true" class="fixed inset-0 grid grid-cols-2 -space-x-52 dark:opacity-20">
 					<div class="blur-[106px] h-56 bg-gradient-to-br from-purple-700 to-purple-400 dark:from-blue-700">A</div>
 					<div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600">b</div>
 				</div>
@@ -45,20 +45,17 @@ const { title } = Astro.props;
     }
 
     .btn {
-        @apply px-4 py-2 font-semibold text-white  rounded select-none  disabled:text-stone-100  focus:outline-none focus:ring focus:ring-indigo-300;
-        @apply bg-indigo-600 disabled:bg-stone-500 hover:bg-indigo-500 disabled:hover:bg-stone-500 active:bg-indigo-700
+        @apply shadow shadow-purple-200/50 px-4 py-2 font-semibold text-white  rounded select-none  disabled:text-stone-100  focus:outline-none focus:ring focus:ring-indigo-300;
+        @apply bg-indigo-500 disabled:bg-stone-500 hover:bg-indigo-500 disabled:hover:bg-stone-500 active:bg-indigo-700
     }
 
-	.textarea {
-		@apply w-full px-4 py-2 font-semibold text-indigo-800 border-2 border-indigo-100 rounded select-none bg-indigo-50 disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300
-	}
-
-	.input {
-		@apply w-full px-4 py-2 font-semibold text-indigo-800 border-2 border-indigo-100 rounded select-none bg-indigo-50 disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 focus:outline-none focus:ring focus:ring-indigo-300
+	.textarea, .input {
+		@apply shadow shadow-purple-200/50 w-full px-3 py-3 text-indigo-800 border rounded select-none bg-white/50 disabled:bg-stone-500 disabled:hover:bg-stone-500 disabled:text-stone-100 focus:outline-none focus:ring focus:ring-indigo-300
 	}
 
 	.select {
-		@apply w-full border-2 border-indigo-100 px-4 py-2 text-indigo-800 bg-indigo-50 rounded select-none font-semibold disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300
+		@apply shadow shadow-purple-200/50 border border-white/50 pl-2 pr-1 py-1 text-indigo-800 bg-white/50 rounded select-none disabled:bg-stone-500 hover:bg-indigo-50 disabled:hover:bg-stone-500 disabled:text-stone-100 active:bg-indigo-200 focus:outline-none focus:ring focus:ring-indigo-300;
+		border-right: .5rem solid transparent;
 	}
 
 	.switch {
@@ -67,6 +64,10 @@ const { title } = Astro.props;
 
 	.switch-button {
 		@apply pointer-events-none inline-block h-[24px] w-[24px] rounded-full bg-white  shadow-lg transform ring-0 transition ease-in-out duration-200
+	}
+
+	.card {
+		@apply relative flex flex-col items-center p-5 bg-white border rounded bg-opacity-50
 	}
 </style>
 
