--- a/src/pages/formbuilder.astro
+++ b/src/pages/formbuilder.astro
@@ -13,14 +13,18 @@ import Switch from '../components/Switch.astro';
 <!-- p-3 w-full max-w-[50rem] bg-white bg-opacity-50 shadow mb-8 -->
 
 <Layout title="Form Builder - Alpinejs Examples">
-    <div class="flex flex-col items-center w-full">
-        <Container x-data="survey">
+    <div class="flex flex-col w-full mx-auto space-around">
+        <div x-data="survey" class="p-5 m-5  card max-w-[80rem] min-w-[70rem]">
             <div class="flex flex-row gap-3">
-                <div class="flex flex-col flex-1 50%">
+                <div class="flex flex-col flex-1 50% min-w-[30rem]">
                     <template x-for="question in questions" :key="question.id">
-                        <details class="p-5 mb-4 shadow card" :data-id="question.id" :open="question.id == open" :class="{'bg-white shadow-lg': open == question.id}">
-                            <summary class="flex items-center h-12 gap-2">
-                                <h3 @click.prevent="toggle(question)" class="w-full text-lg font-semibold" x-text="question.headline"></h3>
+                        <details class="p-5 mb-4 transition-all shadow card" :data-id="question.id" :open="question.id == open" :class="{'bg-white shadow-lg': open == question.id}">
+                            <summary class="flex gap-2 space-around" @click.prevent>
+                                <svg @click.prevent="toggle(question)" xmlns="http://www.w3.org/2000/svg" class="transition-all icon icon-tabler icon-tabler-chevron-down" :class="{'-rotate-90': open == question.id}"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M6 9l6 6l6 -6"></path>
+                                 </svg>
+                                <h3 @click.prevent="toggle(question)" class="w-full overflow-hidden text-lg font-semibold cursor-default select-none" x-text="question.headline"></h3>
                                 <select class="select py-2 w-[15rem] h-12" x-data="selectorData(question, 'question', 'type', selectors_types())" >
                                     <option hidden>Select One</option>
                                     <template x-for="option in Object.entries(options)">
@@ -41,13 +45,13 @@ import Switch from '../components/Switch.astro';
                             </summary>
 
                             <!-- Config -->
-                            <div class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">Question: </label> <Input x-model="question.headline"  /></div>
-                            <div x-show="true || ['openText', 'multipleChoiceMulti', 'multipleChoiceSingle', 'nps', 'rating '].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">Description: </label> <Input x-model="question.subheader"  /></div>
-                            <div x-show="['openText'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">Placeholder: </label> <Input x-model="question.placeholder"  /></div>
-                            <div x-show="['multipleChoiceSingle', 'multipleChoiceMulti'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">Options: </label>
+                            <div class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">Question: </label> <Input x-model="question.headline"  /></div>
+                            <div x-show="true || ['openText', 'multipleChoiceMulti', 'multipleChoiceSingle', 'nps', 'rating '].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">Description: </label> <Input x-model="question.subheader"  /></div>
+                            <div x-show="['openText'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">Placeholder: </label> <Input x-model="question.placeholder"  /></div>
+                            <div x-show="['multipleChoiceSingle', 'multipleChoiceMulti'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">Options: </label>
                                 <ul class="flex flex-col gap-2 mb-2">
                                     <template x-for="choice in question.choices" :key="choice.id">
-                                        <li class="flex items-center gap-1">
+                                        <li class="flex gap-1 space-around">
                                             <Input x-model="choice.label" />
                                             <button @click="removeChoice(question, choice.id)">
                                                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -64,8 +68,8 @@ import Switch from '../components/Switch.astro';
                                 </ul>
                                 <Button @click="addChoice(question)">+ Add Option</Button>
                             </div>
-                            <div x-show="['multipleChoiceSingle', 'multipleChoiceMulti'].includes(question.type)" class="flex items-center gap-2 mt-3" x-transition.duration.250ms.opacity class="py-1">
-                                <label class="font-semibold">shuffleOption: </label>
+                            <div x-show="['multipleChoiceSingle', 'multipleChoiceMulti'].includes(question.type)" class="flex gap-2 mt-3 space-around" x-transition.duration.250ms.opacity class="py-1">
+                                <label class="inline-block mt-2 mb-1">shuffleOption: </label>
                                 <select class="py-3 select" x-data="selectorData(question, 'question', 'shuffleOption', selectors_shuffleOptions())" >
                                     <option hidden>Select One</option>
                                     <template x-for="option in Object.entries(options)">
@@ -73,8 +77,8 @@ import Switch from '../components/Switch.astro';
                                     </template>
                                 </select>
                             </div>
-                            <div x-show="['rating'].includes(question.type)" class="flex items-center gap-2 mt-3" x-transition.duration.250ms.opacity class="py-1">
-                                <label class="font-semibold">scale: </label> 
+                            <div x-show="['rating'].includes(question.type)" class="flex gap-2 mt-3 space-around" x-transition.duration.250ms.opacity class="py-1">
+                                <label class="inline-block mt-2 mb-1">scale: </label> 
 
                                 <select class="py-3 select" x-data="selectorData(question, 'question', 'scale', selectors_scales())">
                                     <option hidden>Select One</option>
@@ -84,8 +88,8 @@ import Switch from '../components/Switch.astro';
                                 </select>
 
                             </div>
-                            <div x-show="['rating'].includes(question.type)" class="flex items-center gap-2 mt-3" x-transition.duration.250ms.opacity class="py-1">
-                                <label class="font-semibold">range: </label> 
+                            <div x-show="['rating'].includes(question.type)" class="flex gap-2 mt-3 space-around" x-transition.duration.250ms.opacity class="py-1">
+                                <label class="inline-block mt-2 mb-1">range: </label> 
 
                                 <select class="py-3 select"  x-data="selectorData(question, 'question', 'range', selectors_ranges())">
                                     <option hidden>Select One</option>
@@ -95,22 +99,22 @@ import Switch from '../components/Switch.astro';
                                 </select>
 
                             </div>
-                            <div x-show="['nps', 'rating'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">lowerLabel: </label> <Input x-model="question.lowerLabel"  /></div>
-                            <div x-show="['nps', 'rating'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">upperLabel: </label> <Input x-model="question.upperLabel"  /></div>
-                            <div x-show="['cta', 'consent'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">html: </label> <Textarea x-model="question.html" class="w-[30rem] h-[20rem]"></Textarea></div>
-                            <div x-show="['cta'].includes(question.type)" class="flex items-center gap-2 mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">buttonExternal: </label> <Switch x-model="question.buttonExternal" /></div>
-                            <div x-show="['openText', 'multipleChoiceSingle', 'multipleChoiceMulti', 'nps', 'cta', 'consent', 'rating'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">Button Label: </label> <Input x-model="question.buttonLabel"  /></div>
-                            <div x-show="['cta'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">buttonUrl: </label> <Input x-model="question.buttonUrl"  /></div>
-                            <div x-show="['consent'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">label: </label> <Input x-model="question.label" /></div>
-                            <div x-show="['consent'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">dismissButtonLabel: </label> <Input x-model="question.dismissButtonLabel" /></div>
+                            <div x-show="['nps', 'rating'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">lowerLabel: </label> <Input x-model="question.lowerLabel"  /></div>
+                            <div x-show="['nps', 'rating'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">upperLabel: </label> <Input x-model="question.upperLabel"  /></div>
+                            <div x-show="['cta', 'consent'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">html: </label> <Textarea x-model="question.html" class="w-[30rem] h-[20rem]"></Textarea></div>
+                            <div x-show="['cta'].includes(question.type)" class="flex gap-2 mt-3 space-around" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">buttonExternal: </label> <Switch class="mt-2" x-model="question.buttonExternal" /></div>
+                            <div x-show="['openText', 'multipleChoiceSingle', 'multipleChoiceMulti', 'nps', 'cta', 'consent', 'rating'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">Button Label: </label> <Input x-model="question.buttonLabel"  /></div>
+                            <div x-show="['cta'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">buttonUrl: </label> <Input x-model="question.buttonUrl"  /></div>
+                            <div x-show="['consent'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">label: </label> <Input x-model="question.label" /></div>
+                            <div x-show="['consent'].includes(question.type)" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">dismissButtonLabel: </label> <Input x-model="question.dismissButtonLabel" /></div>
 
                             <!-- Advanced -->
-                            <div x-show="false" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">backButtonLabel: </label> <Input x-model="question.backButtonLabel"  /></div>
+                            <div x-show="false" class="mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">backButtonLabel: </label> <Input x-model="question.backButtonLabel"  /></div>
                             <div x-show="false" class="mt-3" x-transition.duration.250ms.opacity class="py-1">
-                                <label class="font-semibold">Logic Jumps: </label>
+                                <label class="inline-block mt-2 mb-1">Logic Jumps: </label>
                                 <ul class="flex flex-col gap-2 mb-2">
                                     <template x-for="(rule, idx) in question.logic">
-                                        <li class="flex items-center justify-between w-full gap-1">
+                                        <li class="flex justify-between w-full gap-1 space-around">
                                             <div class="">If this answer</div>
 
                                             <select class="py-3 select" x-data="selectorData(rule, 'rule', 'condition', selectors_ruleConditions(question, rule))">
@@ -152,10 +156,10 @@ import Switch from '../components/Switch.astro';
                             </div>
 
                             <!-- Bottom -->
-                            <div x-show="['openText'].includes(question.type)" class="flex items-center gap-2 mt-3" x-transition.duration.250ms.opacity class="py-1"><label class="font-semibold">longAnswer: </label> <Switch x-model="question.longAnswer" /></div>
-                            <div class="flex items-center gap-2 mt-3" x-transition.duration.250ms.opacity class="py-1">
-                                <label class="font-semibold">required: </label> 
-                                <Switch  x-model="question.required" />
+                            <div x-show="['openText'].includes(question.type)" class="flex gap-2 mt-3 space-around" x-transition.duration.250ms.opacity class="py-1"><label class="inline-block mt-2 mb-1">longAnswer: </label> <Switch class="mt-2" x-model="question.longAnswer" /></div>
+                            <div class="flex gap-2 mt-3 space-around" x-transition.duration.250ms.opacity class="py-1">
+                                <label class="inline-block mt-2 mb-1">required: </label> 
+                                <Switch class="mt-2"  x-model="question.required" />
                             </div>
 
 
@@ -163,10 +167,10 @@ import Switch from '../components/Switch.astro';
                     </template>
                     <Button @click="addQuestion()">+ Add Question</Button>
                 </div>
-                <div class="flex flex-col flex-1 50%">
+                <div class="flex flex-col flex-1 50% min-w-[30rem]">
                     <template x-for="question in questions">
-                        <details class="p-5 mb-4 shadow card" :open="question.id == open" :class="{'bg-white shadow-lg': open == question.id}">
-                            <summary class="flex items-center justify-between w-full h-12" >
+                        <details class="p-5 mb-4 transition-all shadow card" :open="question.id == open" :class="{'bg-white shadow-lg': open == question.id}">
+                            <summary class="flex justify-between w-full space-around" :class="{'h-12': open != question.id}"   @click.prevent>
                                 <h3 @click.prevent="toggle(question)" class="w-full text-lg font-semibold" x-text="question.headline"></h3>
                                 <span class="text-stone-300" x-show="!question.required">Optional</span>
                             </summary>
