fix index compilation

--- a/src/layouts/UsersLayout.astro
+++ b/src/layouts/UsersLayout.astro
@@ -23,9 +23,9 @@ const { title } = Astro.props;
 			background-size: 40%;
 		"
 	>
-		<main class="absolute z-10 w-full h-full space-y-40">
+		<main class="fixed w-full h-full space-y-40">
 			<div class="relative" id="home">
-				<div aria-hidden="true" class="absolute inset-0 grid grid-cols-2 -space-x-52 dark:opacity-20">
+				<div aria-hidden="true" class="fixed inset-0 grid grid-cols-2 -space-x-52 dark:opacity-20">
 					<div class="blur-[106px] h-56 bg-gradient-to-br from-purple-700 to-purple-400 dark:from-blue-700">A</div>
 					<div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600">b</div>
 				</div>
