--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -233,7 +233,7 @@ import Button from '../components/Button.astro';
 <script>
     import Alpine from 'https://esm.sh/alpinejs@3.13.0'
 
-    import plugins from '/plugins.js?url'
+    import plugins from '/src/plugins.js'
     Alpine.plugin(plugins)
 
     import focus from 'https://esm.sh/@alpinejs/focus@3.13.1'
